adding keyboard, bug fixes

--- a/dev/blocks/dict/dict.html
+++ b/dev/blocks/dict/dict.html
@@ -19,7 +19,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                            <a href="" class="keyboard">
+                            <a class="keyboard" rel="#kaz">
                                     <i class="icon-keyboard"></i>
                             </a>
                             <a  class="share">
@@ -40,7 +40,7 @@
                         <div class="block__right">
                             <a  class="textsize" rel="#kaz">
                                 <div class="textsize-pop">
-                                    <input class="slider" type="range" min="16" max="72">
+                                    <input class="slider" type="range" min="16" max="50">
                                 </div>
                                 <i class="icon-font"></i>
                             </a>
@@ -61,7 +61,7 @@
             </div>
             <div class="dict__col" id="rus">
                     <div class="block">
-                        <textarea name="" cols="30" rows="10"  class="block__input"  >Яблоко</textarea>
+                        <textarea name="" cols="30" rows="10"  class="block__input" >Яблоко</textarea>
                         <div class="block__row">
                            
                             <a href="#!" class="block__improve">Улучшить перевод</a>
@@ -75,7 +75,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                                <a href="" class="keyboard">
+                                <a class="keyboard" rel="#rus">
                                         <i class="icon-keyboard"></i>
                                 </a>
                                 <a class="share">
@@ -96,7 +96,7 @@
                             <div class="block__right">
                                     <a  class="textsize" rel="#rus">
                                             <div class="textsize-pop">
-                                                <input class="slider" type="range" min="16" max="72">
+                                                <input class="slider" type="range" min="16" max="50">
                                             </div>
                                             <i class="icon-font"></i>
                                         </a>
@@ -133,7 +133,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                            <a href="" class="keyboard">
+                            <a class="keyboard" rel="#eng">
                                     <i class="icon-keyboard"></i>
                             </a>
                             <a  class="share">
@@ -154,7 +154,7 @@
                         <div class="block__right">
                                 <a  class="textsize" rel="#eng">
                                         <div class="textsize-pop">
-                                            <input class="slider" type="range" min="16" max="72">
+                                            <input class="slider" type="range" min="16" max="50">
                                         </div>
                                         <i class="icon-font"></i>
                                     </a>
