--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                            <a href="" class="keyboard">
+                            <a class="keyboard" rel="#kaz">
                                     <i class="icon-keyboard"></i>
                             </a>
                             <a  class="share">
@@ -94,7 +94,7 @@
                         <div class="block__right">
                             <a  class="textsize" rel="#kaz">
                                 <div class="textsize-pop">
-                                    <input class="slider" type="range" min="16" max="72">
+                                    <input class="slider" type="range" min="16" max="50">
                                 </div>
                                 <i class="icon-font"></i>
                             </a>
@@ -115,7 +115,7 @@
             </div>
             <div class="dict__col" id="rus">
                     <div class="block">
-                        <textarea name="" cols="30" rows="10"  class="block__input"  >Яблоко</textarea>
+                        <textarea name="" cols="30" rows="10"  class="block__input" >Яблоко</textarea>
                         <div class="block__row">
                            
                             <a href="#!" class="block__improve">Улучшить перевод</a>
@@ -129,7 +129,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                                <a href="" class="keyboard">
+                                <a class="keyboard" rel="#rus">
                                         <i class="icon-keyboard"></i>
                                 </a>
                                 <a class="share">
@@ -150,7 +150,7 @@
                             <div class="block__right">
                                     <a  class="textsize" rel="#rus">
                                             <div class="textsize-pop">
-                                                <input class="slider" type="range" min="16" max="72">
+                                                <input class="slider" type="range" min="16" max="50">
                                             </div>
                                             <i class="icon-font"></i>
                                         </a>
@@ -187,7 +187,7 @@
                                 </div>
                                     <i class="icon-copy"></i>
                             </a>
-                            <a href="" class="keyboard">
+                            <a class="keyboard" rel="#eng">
                                     <i class="icon-keyboard"></i>
                             </a>
                             <a  class="share">
@@ -208,7 +208,7 @@
                         <div class="block__right">
                                 <a  class="textsize" rel="#eng">
                                         <div class="textsize-pop">
-                                            <input class="slider" type="range" min="16" max="72">
+                                            <input class="slider" type="range" min="16" max="50">
                                         </div>
                                         <i class="icon-font"></i>
                                     </a>
@@ -318,6 +318,7 @@
 
 
 <script src="assets/js/owl.carousel.min.js"></script>
+<script src="assets/js/jquery.ml-keyboard.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
