--- a/dev/index.html
+++ b/dev/index.html
@@ -34,6 +34,7 @@
 
 
 <script src="assets/js/owl.carousel.min.js"></script>
+<script src="assets/js/jquery.ml-keyboard.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
