--- a/dev/blocks/dict/dict.html
+++ b/dev/blocks/dict/dict.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="block__bottom">
                         <div class="block__left">
-                            <a href="#!" class="copy" rel="#kaz">
+                            <a class="copy" rel="#kaz">
                                 <div class="copy-message">
                                     <span>Көшірілді</span>
                                 </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="block__bottom">
                             <div class="block__left">
-                                <a href="#!" class="copy" rel="#rus">
+                                <a class="copy" rel="#rus">
                                 <div class="copy-message">
                                     <span>Скопировано</span>
                                 </div>
@@ -122,12 +122,12 @@
                 <div class="block">
                     <textarea name="" cols="30" rows="10"  class="block__input" >Apple</textarea>
                     <div class="block__row">
-                        <a href="#!" class="block__improve">IMPROVE THE TRANSLATION</a>
+                        <a href="#!" class="block__improve">Suggest your TRANSLATION</a>
                         <span class="block__lang">Eng</span>
                     </div>
                     <div class="block__bottom">
                         <div class="block__left">
-                           <a href="#!" class="copy" rel="#eng">
+                           <a class="copy" rel="#eng">
                                 <div class="copy-message">
                                     <span>Copied</span>
                                 </div>
@@ -245,3 +245,4 @@
     
 </div>
     </section>
+    
