--- a/dev/index.html
+++ b/dev/index.html
@@ -19,7 +19,10 @@
 
 @@include("blocks/header/header.html")
 @@include("blocks/dict/dict.html")
+@@include("blocks/trade/trade.html")
 @@include("blocks/footer/footer.html")
+@@include("blocks/modals/modals.html")
+
 
 
 
