--- a/dev/contacts.html
+++ b/dev/contacts.html
@@ -71,7 +71,11 @@
 				</div>
 			</header>
 @@include("blocks/contacts/contacts.html")
-@@include("blocks/footer/footer.html")
+<footer class="footer section footer_shadow">
+		<div class="footer__wrapper section__wrapper">
+			<span>Все права защищены ТОО "3 TIL" 2018</span>
+		</div>
+	</footer>
 @@include("blocks/modals/modals.html")
 
 
